fix(projectCarousel): pre-animator visibility

--- a/app/portfolio/features/projects/carousel/projectCarousel.scss
+++ b/app/portfolio/features/projects/carousel/projectCarousel.scss
@@ -100,6 +100,9 @@
     &:active {
       cursor: grabbing;
     }
+    &[data-visible='false'] {
+      opacity: 0;
+    }
     &[data-status='smooth'] {
       transition: s.$carousel-track-transition;
     }
@@ -127,14 +130,14 @@
         height: inherit;
         max-height: inherit;
         overflow: clip;
-      }
-      & picture img {
-        display: block;
-        width: 100%;
-        height: auto;
-        object-fit: contain;
-        transform: scale(1.01);
-        filter: brightness(92%);
+        & img {
+          display: block;
+          width: 100%;
+          height: auto;
+          object-fit: contain;
+          transform: scale(1.01);
+          filter: brightness(92%);
+        }
       }
     }
   }
